parse.c
#ifndef PARSE_INCLUDED
#define PARSE_INCLUDED

#include "types.h"
#include "defs.h"
#include "symTable.h"
#include "lex.h"

static ASTNode* ParseExpression();
static ASTNode* ParseStatement();
static ASTNode* ParseBlock();


static PrimordialType GetType(Token* t){
	switch(t->type){
		case T_Int:		return P_Int;
		case T_Char:	return P_Char;
		case T_Long:	return P_Long;
		case T_Void:	return P_Void;
		default:		return P_Undefined;
	}
}

static PrimordialType ParseType(StorageClass* sc){
	PrimordialType type;
	Token* tok = PeekToken();
	bool isUnsigned = false;
	// If SC is NULL, then storage classes are not supported; Parsing should be skipped in order to force a fail later on.
	if(sc != NULL){
		switch(tok->type){
			case T_Static:	SkipToken(); *sc = C_Static;	break;
			case T_Extern:	SkipToken();	*sc = C_Extern;	break;
			default:		break;
		}
		tok = PeekToken();
		switch(tok->type){
			case T_Static:
			case T_Extern:	FatalM("Cannot use more than one storage class!", Line);
			default:		break;
		}
	}
	if(PeekToken()->type == T_Unsigned){
		SkipToken();
		tok = PeekToken();
		isUnsigned = true;
	}
	switch(tok->type){
		case T_Identifier:{
			SymEntry* tdef = FindGlobal(tok->value.strVal, S_Typedef);
			if(tdef == NULL)				return P_Undefined;
			if((tdef->type & 0xF0) == P_Composite)	
				if(isUnsigned)				FatalM("Unsigned is not valid for composite types!", Line);
				else						return P_Composite;
			type = tdef->type;
			break;
		}
		case T_Int:			type = P_Int;		break;
		case T_Char:		type = P_Char;		break;
		case T_Void:		type = P_Void;		break;
		case T_Long:
			if(PeekTokenN(1)->type == T_Long){
				SkipToken();
				type = P_LongLong;
			}
			else
				type = P_Long;
			break;
		case T_Enum:
		case T_Union:
		case T_Struct:
			if(isUnsigned)	FatalM("Unsigned is not valid for composite types!", Line);
			return P_Composite;	// Structs must be parsed with ParseCompRef()
		default:			return P_Undefined;
	}
	if(isUnsigned)
		type += P_UNSIGNED_DIFF;
	SkipToken();
	while(PeekToken()->type == T_Asterisk){
		SkipToken();
		if((type & 0xF) == 0xF)	FatalM("Indirection limit exceeded!", Line);
		type++;
	}
	return type;
}

static PrimordialType PeekTypeN(int n){
	fpos_t* fpos = malloc(sizeof(fpos_t));
	int ln = Line;
	fgetpos(fptr, fpos);
	for(int i = 0; i < n; i++)
		if(ShiftToken() == NULL)
			break;
	PrimordialType t = ParseType(NULL);
	fsetpos(fptr, fpos);
	free(fpos);
	Line = ln;
	return t;
}

static PrimordialType PeekType(){
	return PeekTypeN(0);
}

/// @brief Parse a composite reference.
/// @param type [OUT] Address of type; will be modified to account for pointers.
/// @return A pointer to the struct definition.
static SymEntry* ParseCompRef(PrimordialType* type){
	Token* cTok = GetToken();
	const char* id = "";
	SymEntry* tdef = NULL;
	switch(cTok->type){
		case T_Identifier:
			tdef = FindGlobal(cTok->value.strVal, S_Typedef);
			if (tdef == NULL)
				FatalM("Expected typename!", Line);
			*type = tdef->type;
			break;
		case T_Enum:
			*type = P_Int;
			// Fall through
		case T_Struct:
		case T_Union:
			{
				Token* tok = GetTransientToken();
				if(tok->type != T_Identifier)		FatalM("Expected identifier after 'struct' keyword!", Line);
				id = tok->value.strVal;
			}
			break;
		default:
			// Should never be able to hit this
			FatalM("Expected typename!", Line);
	}
	while(PeekToken()->type == T_Asterisk) {
		SkipToken();
		(*type)++;
	}
	if(cTok->type == T_Enum)
		return NULL;
	SymEntry* cType = cTok->type == T_Identifier ? tdef->cType : FindStruct(id);
	return cType;
}

static ASTNode* ParseFunctionCall(Token* tok){
	SkipToken();
	bool builtin = strbeg(tok->value.strVal, "__SCC_BUILTIN__");
	// if(strbeg(tok->value.strVal, "__SCC_BUILTIN__"))
	// 	WarnM("Reserved name used in fuction call!", Line);
	SymEntry* func = FindFunc(tok->value.strVal);
	if(func != NULL) // If the function is declared, it overrides any builtin calls of the same name.
		builtin = false;
	else if(!builtin)
		FatalM("Implicit function declarations not yet supported!", Line);
	Parameter* paramPrototype = builtin ? NULL : (Parameter*)func->value.ptrVal;
	ASTNodeList* params = MakeASTNodeList();
	bool variadic = false;
	while(PeekToken()->type != T_CloseParen){
		if(PeekToken()->type == T_Comma)
			SkipToken();
		if(!builtin){
			if(!variadic && paramPrototype == NULL)	FatalM("Too many arguments in function call!", Line);
			if(paramPrototype != NULL && paramPrototype->type == P_Void && streq(paramPrototype->id, "..."))
				variadic = true;
		}
		ASTNode* expr = ParseExpression();
		if(expr == NULL)	FatalM("Invalid expression used as parameter!", Line);
		if(!builtin){
			if(!variadic){
				int typeCheck = CheckTypeCompatibility(paramPrototype->type, expr->type);
				if(typeCheck == TYPES_INCOMPATIBLE)		FatalM("Incompatible type in function call!", Line);
				else if(typeCheck == TYPES_WIDEN_LHS)	WarnM("Truncating parameter in function call!", Line);
			}
			if(paramPrototype != NULL)
				paramPrototype = paramPrototype->next;
		}
		AddNodeToASTList(params, expr);
	}
	if(!builtin && paramPrototype != NULL && (paramPrototype->type != P_Void || !streq(paramPrototype->id, "...")))
		FatalM("Too few arguments in function call!", Line);
	if(GetTransientToken()->type != T_CloseParen)	FatalM("Missing close parenthesis in function call!", Line);
	PrimordialType type = P_Undefined;
	SymEntry* cType = NULL;
	if(func == NULL){
		if(!builtin)
			WarnM("Implicit function declaration!", Line);
	}
	else{
		type = func->type;
		cType = func->cType;
	}
	NodeType op = builtin ? A_BuiltinCall : A_FunctionCall;
	return MakeASTNodeEx(op, type, NULL, NULL, NULL, FlexStr(tok->value.strVal), FlexPtr(params), cType);
}

static ASTNode* ParseVariableReference(Token* outerTok){
	SymEntry* varInfo = FindVar(outerTok->value.strVal, scope);
	if (varInfo == NULL)				return NULL;
	PrimordialType type = varInfo == NULL ? P_Undefined : varInfo->type;
	ASTNode* ref = MakeASTNode(A_VarRef, type, NULL, NULL, NULL, FlexStr(outerTok->value.strVal), varInfo->cType);
	return ref;
}

static ASTNode* ParseBase(){
	Token* tok = GetToken();
	switch(tok->type){
		case T_Identifier:{
			if(PeekToken()->type == T_OpenParen)
				return ParseFunctionCall(tok);
			ASTNode* varRef = ParseVariableReference(tok);
			if(varRef != NULL)
				return varRef;
			SymEntry* enumVal = FindEnumValue(tok->value.strVal);
			if(enumVal != NULL)
				return MakeASTLeaf(A_LitInt, enumVal->value.intVal <= 255 ? P_Char : P_Int, enumVal->value);
			FatalM("Unknown identifier!", Line);
			break;
		}
		case T_OpenParen:{
			ASTNode* expr = ParseExpression();
			Token* tok = PeekToken();
			if(tok->type == T_CloseParen){
				SkipToken();
				return expr;
			}
			ASTNodeList* list = MakeASTNodeList();
				AddNodeToASTList(list, expr);
			while(PeekToken()->type == T_Comma){
				SkipToken();
				expr = ParseExpression();
				AddNodeToASTList(list, expr);
			}
			if(GetTransientToken()->type != T_CloseParen)	FatalM("Expected close parenthesis!", Line);
			ASTNode* node = MakeASTList(A_ExpressionList, list, FlexNULL());
			node->type = expr->type;
			return node;
		}
		case T_LitInt:{
			PrimordialType type = P_Undefined;
			if(tok->value.intVal >= 0 && tok->value.intVal < 256)
				type = P_Char;
			else if(tok->value.intVal >= -2147483647 && tok->value.intVal <= 2147483647)
				type = P_Int;
			else
				type = P_LongLong;
			return MakeASTLeaf(A_LitInt, type, FlexInt(tok->value.intVal));
		}
		case T_LitStr:		return MakeASTLeaf(A_LitStr, P_Char + 1, tok->value);
		default:	FatalM("Invalid Expression!", Line);
	}
}

static ASTNode* ParseArraySubscript(ASTNode* node){
	SkipToken();
	ASTNode* expr = ParseExpression();
	if(GetTransientToken()->type != T_CloseBracket)	FatalM("Expected close bracket in array access!", Line);
	ASTNode* scale = MakeASTBinary(A_Multiply, expr->type, expr, MakeASTLeaf(A_LitInt, P_Int, FlexInt(GetPrimSize(node->type - 1))), FlexNULL());
	ASTNode* add = MakeASTBinary(A_Add, node->type - 1, node, scale, FlexNULL());
	ASTNode* deref = MakeASTUnary(A_Dereference, add, FlexNULL(), node->cType);
	return deref;
}

static ASTNode* ParseValueAccessor(ASTNode* node){
	SkipToken();
	Token* idTok = GetTransientToken();
	if(idTok->type != T_Identifier)	FatalM("Expected member name!", Line);
	SymEntry* member = GetMember(node->cType, idTok->value.strVal);
	ASTNode* offset = MakeASTLeaf(A_LitInt, P_Int, FlexInt(member->value.intVal));
	ASTNode* address = MakeASTUnary(A_AddressOf, node, FlexNULL(), NULL);
	ASTNode* add = MakeASTBinary(A_Add, member->type, address, offset, FlexNULL());
	return MakeASTUnary(A_Dereference, add, FlexNULL(), member->cType);
}

static ASTNode* ParsePointerAccessor(ASTNode* node){
	SkipToken();
	Token* idTok = GetTransientToken();
	if(idTok->type != T_Identifier)	FatalM("Expected member name!", Line);
	SymEntry* member = GetMember(node->cType, idTok->value.strVal);
	ASTNode* offset = MakeASTLeaf(A_LitInt, P_Int, FlexInt(member->value.intVal));
	ASTNode* add = MakeASTBinary(A_Add, member->type, node, offset, FlexNULL());
	return MakeASTUnary(A_Dereference, add, FlexNULL(), member->cType);
}

static ASTNode* ParsePost(ASTNode* node){
	Token* tok = PeekToken();
	switch(tok->type){
		case T_PlusPlus:{
			if(!node->lvalue)				FatalM("The increment postfix operator may only be preceded by an lvalue!", Line);
			if(node->type == P_Composite)	FatalM("The increment postfix operator may not be used on composite types!", Line);
			SkipToken();
			int size = 0;
			ASTNode* rhs = NULL;
			if(node->type & 0xF){
				size = GetTypeSize(node->type - 1, node->cType);
				rhs = MakeASTBinary(A_AssignSum, node->type, node, MakeASTLeaf(A_LitInt, P_LongLong, FlexInt(size)), FlexNULL());
			}
			return MakeASTNodeEx(A_Increment, node->type, node, NULL, rhs, FlexNULL(), FlexInt(size), NULL);
		}
		case T_MinusMinus:{
			if(!node->lvalue)				FatalM("The decrement postfix operator may only be preceded by an lvalue!", Line);
			if(node->type == P_Composite)	FatalM("The decrement postfix operator may not be used on composite types!", Line);
			SkipToken();
			int size = 0;
			ASTNode* rhs = NULL;
			if(node->type & 0xF){
				size = GetTypeSize(node->type - 1, node->cType);
				rhs = MakeASTBinary(A_AssignDifference, node->type, node, MakeASTLeaf(A_LitInt, P_LongLong, FlexInt(size)), FlexNULL());
			}
			return MakeASTNodeEx(A_Decrement, node->type, node, NULL, rhs, FlexNULL(), FlexInt(size), NULL);
		}
		case T_OpenParen:
			return NULL; // Function calls are currently only handled alongside identifiers. Function pointers are not yet supported.
		case T_OpenBracket:
			if(!node->lvalue)				FatalM("The array accessor operator may only be preceded by an lvalue!", Line);
			return ParseArraySubscript(node);
		case T_Period:
			if(!node->lvalue)				FatalM("The member accessor may only be preceded by an lvalue!", Line);
			if(node->type != P_Composite)	FatalM("The member accessor may only be used on a composite!", Line);
			if(node->type & 0x0F)			FatalM("The member accessor may not be used on a pointer!", Line);
			if(node->cType == NULL)			FatalM("Can only access members of a composite!", Line);
			return ParseValueAccessor(node);
		case T_Arrow:
			if(!node->lvalue)						FatalM("The dereferencing member accessor may only be preceded by an lvalue!", Line);
			if(!(node->type & 0x0F))				FatalM("The dereferencing member accessor may only be used on a pointer!", Line);
			if((node->type & 0xF0) != P_Composite)	FatalM("The dereferencing member accessor may only be used on a composite pointer!", Line);
			if(node->cType == NULL)					FatalM("Can only access members of a composite!", Line);
			return ParsePointerAccessor(node);
		default:
			return NULL;
	}
}

static ASTNode* ParsePrimary(){
	ASTNode* node = ParseBase();
	ASTNode* post = ParsePost(node);
	while(post != NULL){
		node = post;
		post = ParsePost(node);
	}
	return node;
}

static ASTNode* ParseFactor(){
	Token* tok = PeekToken();
	switch(tok->type){
		case T_Minus:{
			SkipToken();
			ASTNode* Factor = ParseFactor();
			if(FOLD_INLINE && Factor->op == A_LitInt){
				int val = -Factor->value.intVal;
				free(Factor);
				return MakeASTLeaf(A_LitInt, P_Int, FlexInt(val));
			}
			return MakeASTUnary(A_Negate, Factor,	FlexNULL(), NULL);
		}
		case T_Bang:{
			SkipToken();
			ASTNode* factor = ParseFactor();
			if(FOLD_INLINE){
				switch(factor->op){
					case A_LitInt:
						factor->value.intVal = !factor->value.intVal;
						return factor;
					case A_LogicalNot:	return MakeASTUnary(A_Logicize, factor->lhs, FlexNULL(), NULL);
					case A_Logicize:	return MakeASTUnary(A_LogicalNot, factor->lhs, FlexNULL(), NULL);
					default:			break;
				}
			}
			return MakeASTUnary(A_LogicalNot, factor, FlexNULL(), NULL);
		}
		case T_Tilde:		SkipToken(); return MakeASTUnary(A_BitwiseComplement,	ParseFactor(),	FlexNULL(), NULL);
		case T_Semicolon:	return MakeASTLeaf(A_Undefined, P_Undefined, FlexNULL());
		case T_PlusPlus:{
			SkipToken();
			ASTNode* node = ParseFactor();
			if(!node->lvalue)				FatalM("The increment prefix operator '++' may only be used before an lvalue!", Line);
			if(node->type == P_Composite)	FatalM("Composite increments not supported!", Line);
			int size = 0;
			ASTNode* rhs = NULL;
			if(node->type & 0xF){
				size = GetTypeSize(node->type - 1, node->cType);
				rhs = MakeASTBinary(A_AssignSum, node->type, node, MakeASTLeaf(A_LitInt, P_LongLong, FlexInt(size)), FlexNULL());
			}
			return MakeASTNodeEx(A_Increment, node->type, node, NULL, rhs, FlexInt(1), FlexInt(size), NULL);
		}
		case T_MinusMinus:{
			SkipToken();
			ASTNode* node = ParseFactor();
			if(!node->lvalue)				FatalM("The decrement prefix operator '--' may only be used before an lvalue!", Line);
			if(node->type == P_Composite)	FatalM("Composite decrements not supported!", Line);
			int size = 0;
			ASTNode* rhs = NULL;
			if(node->type & 0xF){
				size = GetTypeSize(node->type - 1, node->cType);
				rhs = MakeASTBinary(A_AssignDifference, node->type, node, MakeASTLeaf(A_LitInt, P_LongLong, FlexInt(size)), FlexNULL());
			}
			return MakeASTNodeEx(A_Decrement, node->type, node, NULL, rhs, FlexInt(1), FlexInt(size), NULL);
		}
		case T_Ampersand:{
			SkipToken();
			ASTNode* fctr = ParseFactor();
			if(!fctr->lvalue)		FatalM("The Address operator may only be used on variable references!", Line);
			PrimordialType t = fctr->type;
			if(t == P_Undefined)	FatalM("Expression type not determined!", Line);
			if((t & 0xF) == 0xF)	FatalM("Indirection limit exceeded!", Line);
			return MakeASTNode(A_AddressOf,		fctr->type + 1,	fctr,	NULL,	NULL,	FlexNULL(), fctr->cType);
		}
		case T_Asterisk:{
			SkipToken();
			ASTNode* fctr = ParseFactor();
			PrimordialType t = fctr->type;
			if(t == P_Undefined)		FatalM("Expression type not determined!", Line);
			if(!(t & 0xF))				FatalM("Can't dereference a non-pointer!", Line);
			return MakeASTNode(A_Dereference,	fctr->type - 1,	fctr,	NULL,	NULL,	FlexNULL(), fctr->cType);
		}
		case T_Sizeof:{
			SkipToken();
			bool withParen = PeekToken()->type == T_OpenParen;
			PrimordialType type = P_Undefined;
			if(withParen){
				SkipToken();
				type = PeekType();
			}
			// if(GetToken()->type != T_OpenParen)		FatalM("Expected open parenthesis after 'sizeof'!", Line);
			// PrimordialType type = PeekType();
			if(type == P_Undefined){
				ASTNode* expr = ParseExpression();
				if(withParen && GetTransientToken()->type != T_CloseParen)	FatalM("Expected close parenthesis after 'sizeof'!", Line);
				return MakeASTLeaf(A_LitInt, P_Char, FlexInt(GetTypeSize(expr->type, expr->cType)));
			}
			type = ParseType(NULL);
			if(type == P_Undefined)					FatalM("Expected typename!", Line);
			SymEntry* cType = (type == P_Composite) ? ParseCompRef(&type) : NULL;
			if(withParen && GetTransientToken()->type != T_CloseParen)	FatalM("Expected close parenthesis after 'sizeof'!", Line);
			return MakeASTLeaf(A_LitInt, P_Char, FlexInt(GetTypeSize(type, cType)));
		}
		case T_OpenParen:{
			fpos_t* fpos = malloc(sizeof(fpos_t));
			fgetpos(fptr, fpos);
			int ln = Line;
			const char* file = curFile;
			SkipToken();
			PrimordialType type = ParseType(NULL);
			bool failed = type == P_Undefined;
			while(!failed){
				SymEntry* cType = (type == P_Composite) ? ParseCompRef(&type) : NULL;
				if(GetTransientToken()->type != T_CloseParen) {	failed = true;	break; }
				ASTNode* expr = ParseFactor();
				if(expr == NULL)		FatalM("Got NULL instead of expression! (Internal @ parse.h)", __LINE__);
				// Still need to handle narrowing manually... :'(
				if(IsPointer(type)){
					expr->type = type;
					expr->cType = cType;
					return expr;
				}
				if(expr->op == A_LitInt){
					size_t maxValue = (~(size_t)0) >> 8 * (sizeof(size_t) - GetTypeSize(type, cType));
					if((size_t)expr->value.intVal > maxValue)
						expr->value.intVal &= maxValue;
					expr->type = type;
					expr->cType = cType;
					return expr;
				}
				return MakeASTNode(A_Cast, type, expr, NULL, NULL, FlexNULL(), cType);
			}
			if(failed){
				curFile = file;
				Line = ln;
				fsetpos(fptr, fpos);
				free(fpos);
			}
			return ParsePrimary();
		}
		default:	return ParsePrimary();
	}
}

static ASTNode* ParseTerm(){
	ASTNode* lhs = ParseFactor();
	Token* tok = PeekToken();
	while(tok->type == T_Asterisk || tok->type == T_Divide || tok->type == T_Percent){
		SkipToken();
		ASTNode* rhs = ParseFactor();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		switch (tok->type){
			case T_Asterisk:
				if(FOLD_INLINE){
					if(lhs->op == A_LitInt && lhs->value.intVal == 0){
						lhs = MakeASTLeaf(A_LitInt, P_Char, FlexInt(0));
						break;
					}
					if(rhs->op == A_LitInt && rhs->value.intVal == 0){
						lhs = MakeASTLeaf(A_LitInt, P_Char, FlexInt(0));
						break;
					}
					if(lhs->op == A_LitInt && lhs->value.intVal == 1){
						lhs = rhs;
						break;
					}
					if(rhs->op == A_LitInt && rhs->value.intVal == 1)
						break;
					if(lhs->op == A_LitInt && rhs->op == A_LitInt){
						lhs->value.intVal *= rhs->value.intVal;
						break;
					}
				}
				lhs = MakeASTBinary(A_Multiply,	type, lhs, rhs, FlexNULL());
				break;
			case T_Divide:
				if(FOLD_INLINE){
					if(lhs->op == A_LitInt && lhs->value.intVal == 0){
						lhs = MakeASTLeaf(A_LitInt, P_Char, FlexInt(0));
						break;
					}
					if(rhs->op == A_LitInt && rhs->value.intVal == 1)
						break;
					if(lhs->op == A_LitInt && rhs->op == A_LitInt){
						lhs->value.intVal /= rhs->value.intVal;
						break;
					}
				}
				lhs = MakeASTBinary(A_Divide,	type, lhs, rhs, FlexNULL());
				break;
			case T_Percent:
				if(FOLD_INLINE){
					if(lhs->op == A_LitInt && lhs->value.intVal == 0){
						lhs = MakeASTLeaf(A_LitInt, P_Char, FlexInt(0));
						break;
					}
					if(rhs->op == A_LitInt && rhs->value.intVal == 1){
						lhs = MakeASTLeaf(A_LitInt, P_Char, FlexInt(0));
						break;
					}
					if(lhs->op == A_LitInt && rhs->op == A_LitInt){
						lhs->value.intVal %= rhs->value.intVal;
						break;
					}
				}
				lhs = MakeASTBinary(A_Modulo,	type, lhs, rhs, FlexNULL());
				break;
		}
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseAdditiveExpression(){
	ASTNode* lhs = ParseTerm();
	Token* tok = PeekToken();
	while(tok->type == T_Plus || tok->type == T_Minus){
		SkipToken();
		ASTNode* rhs = ParseTerm();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		bool lhsIsPtr = IsPointer(lhs->type);
		bool rhsIsPtr = IsPointer(rhs->type);
		if(lhsIsPtr && !rhsIsPtr)
			rhs = ScaleNode(rhs, lhs->type);
		else if(rhsIsPtr && !lhsIsPtr)
			lhs = ScaleNode(lhs, rhs->type);
		switch (tok->type){
			case T_Plus:
				if(FOLD_INLINE){
					if(lhs->op == A_LitInt && lhs->value.intVal == 0){
						lhs = rhs;
						break;
					}
					if(rhs->op == A_LitInt && rhs->value.intVal == 0)
						break;
					if(lhs->op == A_LitInt && rhs->op == A_LitInt){
						lhs->value.intVal += rhs->value.intVal;
						break;
					}
				}
				lhs = MakeASTBinary(A_Add,		type, lhs, rhs, FlexNULL());
				break;
			case T_Minus:
				if(FOLD_INLINE){
					if(rhs->op == A_LitInt && rhs->value.intVal == 0){
						if(lhsIsPtr && rhsIsPtr)
							lhs = MakeASTBinary(A_Divide,	P_ULongLong, lhs,	MakeASTLeaf(A_LitInt, P_LongLong, FlexInt(GetTypeSize(lhs->type - 1, lhs->cType))), FlexNULL());
						break;
					}
					if(lhs->op == A_LitInt && rhs->op == A_LitInt){
						lhs->value.intVal -= rhs->value.intVal;
						if(lhsIsPtr && rhsIsPtr)
							lhs = MakeASTBinary(A_Divide,	P_ULongLong, lhs,	MakeASTLeaf(A_LitInt, P_LongLong, FlexInt(GetTypeSize(lhs->type - 1, lhs->cType))), FlexNULL());
						break;
					}
				}
				lhs = MakeASTBinary(A_Subtract,	type, lhs, rhs, FlexNULL());
				if(lhsIsPtr && rhsIsPtr)
					lhs = MakeASTBinary(A_Divide,			P_ULongLong, lhs,	MakeASTLeaf(A_LitInt, P_LongLong, FlexInt(GetTypeSize(lhs->type - 1, lhs->cType))), FlexNULL());
				break;
		}
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseBitShiftExpression(){
	ASTNode* lhs = ParseAdditiveExpression();
	Token* tok = PeekToken();
	while(tok->type == T_DoubleLess || tok->type == T_DoubleGreater){
		SkipToken();
		ASTNode* rhs = ParseAdditiveExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		switch(tok->type){
			case T_DoubleLess:		lhs = MakeASTBinary(A_LeftShift,	type, lhs, rhs, FlexNULL());	break;
			case T_DoubleGreater:	lhs = MakeASTBinary(A_RightShift,	type, lhs, rhs, FlexNULL());	break;
		}
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseRelationalExpression(){
	ASTNode* lhs = ParseBitShiftExpression();
	Token* tok = PeekToken();
	while(tok->type == T_Less || tok->type == T_Greater || tok->type == T_LessEqual || tok->type == T_GreaterEqual){
		SkipToken();
		ASTNode* rhs = ParseBitShiftExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		switch(tok->type){
			case T_Less:			lhs = MakeASTBinary(A_LessThan,			type, lhs, rhs, FlexNULL());	break;
			case T_Greater:			lhs = MakeASTBinary(A_GreaterThan,		type, lhs, rhs, FlexNULL());	break;
			case T_LessEqual:		lhs = MakeASTBinary(A_LessOrEqual,		type, lhs, rhs, FlexNULL());	break;
			case T_GreaterEqual:	lhs = MakeASTBinary(A_GreaterOrEqual,	type, lhs, rhs, FlexNULL());	break;
		}
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseEqualityExpression(){
	ASTNode* lhs = ParseRelationalExpression();
	Token* tok = PeekToken();
	while(tok->type == T_DoubleEqual || tok->type == T_BangEqual){
		SkipToken();
		ASTNode* rhs = ParseRelationalExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		switch(tok->type){
			case T_DoubleEqual:		lhs = MakeASTBinary(A_EqualTo,		type, lhs, rhs, FlexNULL());	break;
			case T_BangEqual:		lhs = MakeASTBinary(A_NotEqualTo,	type, lhs, rhs, FlexNULL());	break;
		}
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseRepeatingEqualityExpression(){
	ASTNode* lhs = ParseEqualityExpression();
	while(PeekToken()->type == T_EqualDoublePipe){
		SkipToken();
		ASTNode* rhs = ParseEqualityExpression();
		if(rhs->op != A_ExpressionList)
			FatalM("The Repeating Short-Circuiting Logical OR Operator currently only supports an expression list as a right hand operand.", Line);
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		lhs = MakeASTBinary(A_RepeatLogicalOr, type, lhs, rhs, FlexNULL());
	}
	return lhs;
}

static ASTNode* ParseBitwiseAndExpression(){
	ASTNode* lhs = ParseRepeatingEqualityExpression();
	Token* tok = PeekToken();
	while(tok->type == T_Ampersand){
		SkipToken();
		ASTNode* rhs = ParseRepeatingEqualityExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		lhs = MakeASTBinary(A_BitwiseAnd,	type, lhs, rhs, FlexNULL());
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseBitwiseXorExpression(){
	ASTNode* lhs = ParseBitwiseAndExpression();
	Token* tok = PeekToken();
	while(tok->type == T_Caret){
		SkipToken();
		ASTNode* rhs = ParseBitwiseAndExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		lhs = MakeASTBinary(A_BitwiseXor,	type, lhs, rhs, FlexNULL());
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseBitwiseOrExpression(){
	ASTNode* lhs = ParseBitwiseXorExpression();
	Token* tok = PeekToken();
	while(tok->type == T_Pipe){
		SkipToken();
		ASTNode* rhs = ParseBitwiseXorExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		lhs = MakeASTBinary(A_BitwiseOr,	type, lhs, rhs, FlexNULL());
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseLogicalAndExpression(){
	ASTNode* lhs = ParseBitwiseOrExpression();
	Token* tok = PeekToken();
	while(tok->type == T_DoubleAmpersand){
		SkipToken();
		ASTNode* rhs = ParseBitwiseOrExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		lhs = MakeASTBinary(A_LogicalAnd,	type, lhs, rhs, FlexNULL());
		tok = PeekToken();
	}
	return lhs;
}

static ASTNode* ParseLogicalOrExpression(){
	ASTNode* lhs = ParseLogicalAndExpression();
	Token* tok = PeekToken();
	while(tok->type == T_DoublePipe){
		SkipToken();
		ASTNode* rhs = ParseLogicalAndExpression();
		PrimordialType type = NodeWidestType(lhs, rhs);
		if(type == P_Undefined)
			FatalM("Types of expression members are incompatible!", Line);
		lhs = MakeASTBinary(A_LogicalOr,	type, lhs, rhs, FlexNULL());
		tok = PeekToken();
	}
	return lhs;
}
